
[package]
name = "rust_homework"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_homework"
path = "src/lib.rs"

[[bin]]
name = "rust_homework"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"